--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://github.io/palanas-jeffrey/portfolio",
+  "homepage": "https://palanas-jeffrey.github.io/portfolio",
   "scripts": {
     "start": "vite",
     "dev": "vite",
